--- a/server/package.json
+++ b/server/package.json
@@ -25,5 +25,8 @@
         "nodemon": "^3.1.0",
         "passport": "^0.7.0",
         "passport-local": "^1.0.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.19"
     }
 }
