--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
+        "server": "nodemon index.js",
         "dev": "nodemon index.js"
     },
     "keywords": [],
