--- a/api/vercel.json
+++ b/api/vercel.json
@@ -8,8 +8,8 @@
     ],
     "rewrites": [
         {
-            "src": "/(.*)",
-            "dest": "/index.js"
+            "source": "/(.*)",
+            "destination": "/inde.js"
         }
     ]
 }
